# GeoToken

./: .gitignore  GeoToken-DeepSeekOCR-Analysis.html  README.md  pyproject.toml
configs/: ablation_swin_decoder.json  compression_sweep.json  compression_sweep.yaml  dataset_manifest.example.jsonl
docs/: data_autodl.md  experiment_protocol.md  research_plan.md  swin_decoder_prompt.md
scripts/: build_manifest_from_folders.py  run_compression_sweep.py  run_sanity_check.py  validate_manifest.py
src/geotoken/: __init__.py  backbone.py  dataset.py  decoder.py  losses.py  manifest.py  metrics.py  ray_encoding.py  rays.py  swin_decoder.py  tokenizer.py
