[project]
name = "geotoken"
version = "0.1.0"
description = "Geometry-preserving visual tokenization for remote sensing 3D reconstruction"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pillow>=10.0",
  "torch>=2.1",
  "torchvision>=0.16",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "tensorboard>=2.14",
  "scikit-image>=0.22",
]

[project.optional-dependencies]
geo = [
  "rasterio>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
